--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -3,6 +3,9 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  display: flex;          /*my addition*/
+  align-items: center;    /*my addition*/
+  justify-content: center;/*my addition*/
 }
 
 .box {
