--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,28 +1,86 @@
+/** {border: 1px solid black;}*/
+
+html {border:none}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  padding: 0;
+  border: none;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  padding-left: 16px;
+
+  display:flex;
+  align-items: center;
 }
 
-.footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
-}
+
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  list-style: none;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 16px;
+
+  flex-shrink: 0;/*same as min-width:300px*/
+  display: flex;
+}
+
+.sidebar ul {
+  list-style: none;/*remove bullet points*/
+  padding:0;
+  margin:0;
+}
+
+.sidebar li {
+  margin-bottom: 16px;
+}
+
+.sidebar a {
+  text-decoration: none;/*remove underline*/
+  color: white;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  padding: 16px;
+  margin: 16px;
+}
+
+.cards {
+  padding: 32px;
+
+  display:flex;
+  flex-wrap: wrap;
+}
+
+.middle {
+  display: flex;
+  flex:1;/*makes cards fill whitespace below*/
+}
+
+.footer {
+  height: 72px;
+  background: #eee;
+  color: darkmagenta;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
